--- a/src/Header.css
+++ b/src/Header.css
@@ -3,7 +3,34 @@ nav {
     padding: 10px;
 }
 
-ul {
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: #333;
+    padding: 1em;
+}
+
+.list {
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+.item {
+    margin-right: 1em;
+}
+
+.item a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.item a:hover {
+    color: #ffbb33;
+}
+
+
+/* ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -17,8 +44,9 @@ li {
 Link {
     text-decoration: none;
     color: white;
-}
+} */
 
 Link:hover {
+    color: #157347;
     text-decoration: none;
 }
