--- a/src/Productfilter.css
+++ b/src/Productfilter.css
@@ -1,9 +1,23 @@
 .card{
-    height: 300px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 10px;
     margin-top: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ddd; /* Adapte conforme necessário */
+    border-radius: 8px;
+    transition: box-shadow 0.3s ease;
 }
 
-.img-fluid{
-    height: 300px;
-    width: 300px;
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+.row.justify-content-center {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
 }
