--- a/src/Header.css
+++ b/src/Header.css
@@ -1,9 +1,4 @@
 nav {
-    background-color: #333;
-    padding: 10px;
-}
-
-#navbar {
     display: flex;
     justify-content: space-between;
     background-color: #333;
@@ -18,33 +13,14 @@ nav {
 
 .item {
     margin-right: 1em;
-}
-
-.item a {
     color: #fff;
     text-decoration: none;
 }
 
-.item a:hover {
-    color: #ffbb33;
+.item hover {
+    color: #33ff8f;
 }
 
-
-/* ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-li {
-    margin-right: 15px;
-}
-
-Link {
-    text-decoration: none;
-    color: white;
-} */
 
 Link:hover {
     color: #157347;
